Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11806,7 +11806,7 @@
 }
 
 @article{Kossatchev2005,
-    title = {{Survey of compiler testing methods}},
+    title = {{Survey of Compiler Testing Methods}},
     year = {2005},
     journal = {Programming and Computer Software},
     author = {Kossatchev, A. S. and Posypkin, M. A.},
