--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -387,17 +387,6 @@ ComputeAorta (Testbeds $9\pm$) defers kernel compilation so that it can perform 
 
 % w column: CLSmith produced 51 distinct wrong-output test cases. Conservatively, let's assume they'll all interesting. DeepSmith produced 69 distinct wrong-output test cases. Conservatively, let's assume that only the bug reports we've submitted are interesting (3).
 Over the course of testing, a combined $3.4 \times 10^8$ lines of CLSmith code was evaluated, compared to $3.8 \times 10^6$ lines of DeepSmith code. This provides CLSmith a greater potential to trigger miscompilations. CLSmith generated 33 programs with anomalous wrong-outputs. DeepSmith generated 30.
-%For this reason, we believe our approach to be complimentary, with CLSmith providing targeted middle-end stress-testing, and DeepSmith providing a broader class of bugs. \cc{Hugh, Pavlos, do you agree?}\hl{Don't think we need to draw such conclusions here.} However, as shown in Section~\ref{subsec:runtime-defects}, DeepSmith is capable of discovering miscompilations which CLSmith cannot. \cc{I'm not sure what we have to say about miscompilations. We didn't reduce CLSmith's, so there may be duplicates, and we definitely have false-positives in the 'w' column.}
-
-
-%\paragraph{Bug Diversity} %
-%
-%\hl{ditch.}
-%The design of CLSmith biases the system towards identifying miscompilations. %
-% esp. struct miscompilations, though only 7.1\% of OpenCL kernels on GitHub use them
-%Our results indicate that our system is capable of detecting a broader range of compiler defects, including miscompilations which CLSmith is unable to produce test cases for. For example, Oclgrind was resilient to CLSmith testing, yet we identified both compile-time and runtime defects.
-%
-%Our approach is biased towards identifying bugs in compiler front-ends, since not all generated programs are well formed/well typed. Overall, we believe the two systems to be complimentary, with CLSmith providing targeted middle-end stress-testing.
 
 
 \subsection{Compiler Stability over Time}%
@@ -407,7 +396,7 @@ The Clang front-end to LLVM supports OpenCL, and is commonly used in OpenCL driv
 
 Figure~\ref{fig:clangs} shows that the crash rate of the Clang front-end is, for the most part, steadily decreasing over time. The number of failing compiler crashes decreased tenfold between 3.6.2 and 5.0.0.
 %\cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} \pp{We do find interesting bugs, but the important question is whether we are more likely to find interesting bugs than CLSmith.}
-Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between some releases. Notably, the current development trunk has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 and 4 were triggered by some kernels in the development trunk but not under any prior release. We have submitted bug reports for each of the three assertions triggered in the development trunk, as well as for two distinct unreachables.
+Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this experiment. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. The overall rate at which the assertion is triggered has decreased markedly, although there are slight increases between some releases. Notably, the current development trunk has the second lowest crash rate, but is joint first in terms of the number of unique assertions. Assertions 3 (\emph{Addr == 0 || hasTargetSpecificAddressSpace()}) and 4 (\emph{isScalarType()}) were triggered by some kernels in the development trunk but not under any prior release. We have submitted bug reports for each of the three assertions triggered in the development trunk, as well as for two distinct unreachables.
 
 \begin{figure}
   \centering %
