Update on Overleaf.

--- a/lst/samples.tex
+++ b/lst/samples.tex
@@ -282,7 +282,7 @@
       a[-1] = 2;
       a[0] = 3;
     }
-  \end{lstlisting}\cc{TODO:}
+  \end{lstlisting}
 \end{lrbox}
 
 \newsavebox{\UninitRead}
