--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -12,7 +12,7 @@ Compilers are a fundamental, trusted technology. Bugs in them are particularly h
 Random test case generation --- \emph{fuzzing} --- is a well established and effective method for identifying compiler bugs~\cite{Chen2014a,Chen2013,Kossatchev2005}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes in the compiler are easy to detect, determining that programs are correctly compiled is not generally possible without either developer provided validation for the particular program's behavior or a gold standard compiler from which to create reference outputs. In the absence of those, we can employ Differential Testing~\cite{McKeeman1998}. The generated code and a set of inputs form the \emph{test case} which is compiled and executed on multiple \emph{testbeds}. If the test case should have deterministic behavior, but the output differs between testbeds, then a bug has been discovered.
 
 %Compiler fuzzing boils down to efficiently generating test cases that trigger compiler bugs. 
-The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end.  Complex static and dynamic analyses make sure that programs are free from undefined behavior. The programs are then differentially tested.
+The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end.  Complex static and dynamic analyses make sure that programs are free from undefined behavior. The programs are then differentially tested.
 
 While CSmith has been successfully used to identify hundreds of bugs in compilers, it and similar approaches have a significant drawback. They represent a huge undertaking and require a thorough understanding of the target programming language. CSmith was developed over the course of years, and consists of over 41k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered for each new target language. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} --- a superficially simple task --- took 9 months and an additional 8k lines of code. Given the difficulty of defining a new grammar, typically only a subset of the language is implemented.
 
