--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -10,7 +10,7 @@ In this section we describe the particular experimental parameters used.
   % \rowcolors{2}{white}{gray!25}
   \input{build/tab/platforms}
   \caption{%
-    OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without.%
+    OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without. \factcheck{bug reports column}%
   }
   \label{tab:platforms}
 \end{table*}
